control-plane/custom-gateway-api/conformance/tests/httproute-reference-grant.yaml
apiVersion: consul.networking.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant
  namespace: gateway-conformance-web-backend
spec:
  from:
    - group: consul.networking.io
      kind: HTTPRoute
      namespace: gateway-conformance-infra
  to:
    - group: ""
      kind: Service
      name: web-backend
---
apiVersion: consul.networking.io/v1beta1
kind: HTTPRoute
metadata:
  name: reference-grant
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - backendRefs:
        - name: web-backend
          namespace: gateway-conformance-web-backend
          port: 8080
